<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 UnifyID, Inc. All rights reserved.
  ~ Unauthorized copying or excerpting via any medium is strictly prohibited.
  ~ Proprietary and confidential.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/header_description"
                android:scaleType="fitCenter"
                android:src="@drawable/unifyid_logo" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:visibility="gone"
            android:id="@+id/setup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/configuration_help_text"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/pushauth_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/pushauth_info_container_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/current_configuration_title_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/configured_sdk_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/configured_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
